
Package: PSCBS
==============

Version: 0.17.4 [2011-11-26]
o An internal sanity check of bootstrapTCNandDHByRegion() for
  PairedPSCBS would give an error if DH mean levels had been set
  to NA for segments called ROH.


Version: 0.17.3 [2011-11-24]
o Added callSegmentationOutliers() and dropSegmentationOutliers()
  for data frames.
o CLEANUP: Renamed field 'position' of the example data to 'x'.
  This helps us clean up some of the examples.
o BUG FIX: bootstrapTCNandDHByRegion() for PairedPSCBS would give
  an error, if a segment did not have any TCN signals, which can
  occur when known segments are specified for Paired PSCBS.


Version: 0.17.2 [2011-11-22]
o Added findLargeGaps() and gapsToSegments().


Version: 0.17.1 [2011-11-21]
o BUG FIX: The internal sanity check of testROH() on weights was
  slightly too conservative (required to high precision) when it
  came to asserting that the sum of the weights equals one.
o BUG FIX: resegment() for PairedPSCBS called segmentByCBS()
  instead of segmentByPairedPSCBS().


Version: 0.17.0 [2011-11-19]
o GENERALIZATION: Now it is possible to run Paired PSCBS (without
  TumorBoost) when only genotypes but not BAFs are available for the
  matched normal.


Version: 0.16.3 [2011-11-17]
o Added resegment() for CBS and PairedPSCBS for easy resegmentation.
o Adjusted segmentByCBS() such that it can handle 'knownSegments'
  with chromosome boundaries given as -Inf and +Inf.
o Now argument 'mar' for plotTracks() defaults to NULL.
o ROBUSTNESS: Added redundancy tests for segmentByCBS() and
  segmentByPairedPSCBS() with argument 'knownSegments'.
o ROBUSTNESS: Now segmentByCBS() does more validation of 'knownSegments'.
o FIX: extractRegions() for AbstractCBS would also show verbose output.
o BUG FIX: Now argument/parameter 'seed' is correctly preserved by
  segmentByCBS().  So is 'tbn' for segmentByPairedPSCBS().
o BUG FIX: segmentByPairedPSCBS() would give an error when trying to